--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@types/cookie": "^0.5.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"sass": "^1.62.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"svelte-preprocess": "^5.0.3",
