--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   branch: main # Branch to update (optional; defaults to master)
 
 media_folder: "static/uploads"
-public_folder: "/uploads"
+public_folder: "/src/routes/rosters"
 
 collections:
   - name: "players" # Used in routes, e.g., /admin/collections/blog
