--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,12 +3,12 @@ backend:
   branch: main # Branch to update (optional; defaults to master)
 
 media_folder: "static/uploads"
-public_folder: "/src/routes/rosters"
+public_folder: "/uploads"
 
 collections:
   - name: "players" # Used in routes, e.g., /admin/collections/blog
     label: "Players" # Used in the UI
-    folder: "content/players" # The path to the folder where the documents are stored
+    folder: "src/routes/rosters" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{day}}-{{month}}-{{year}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
