Markdown mostly working, working as intended.

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -27,5 +27,6 @@ collections:
       - {label: "Title", name: "title", widget: "string", required: true}
       - {label: "Author", name: "author", widget: "relation", required: true, collection: "players", search_fields: ["gamerTag", "IRL"], searchFields: ["gamerTag", "IRL"], display_fields: ["gamerTag", "IRL"], value_field: "gamerTag", valueFields: "gamerTag"}
       - {label: "Content", name: "body", widget: "markdown", required: true, }
+      - {label: "Short Summary", name: 'summary', widget: 'markdown', required: true}
   # - name: "Teams"
   # - name: "news"
