--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"latest-version": "^7.0.0"
+		"@types/marked": "^5.0.0",
+		"latest-version": "^7.0.0",
+		"marked": "^5.0.2"
 	}
 }
