--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -36,6 +36,6 @@ collections:
     fields:
       - {label: "Team Name", name: "teamName", widget: "string", required: true}
       - {label: "Team Picture", name: "teamPicture", widget: "image", required: false}
-      - {label: "Teammates", name: "teammates", widget: "list", required: true, fields:
-        - {label: "Player", name: "player", widget: "relation", required: true, collection: "players", search_fields: ["gamerTag", "IRL"], searchFields: ["gamerTag", "IRL"], display_fields: ["gamerTag", "IRL"], value_field: "gamerTag", valueFields: "gamerTag"}}
+      - {label: "Teammates", name: "teammates", widget: "list", required: true, fields: 
+          {label: "Player", name: "player", widget: "relation", required: true, collection: "players", search_fields: ["gamerTag", "IRL"], searchFields: ["gamerTag", "IRL"], display_fields: ["gamerTag", "IRL"], value_field: "gamerTag", valueFields: "gamerTag"}}
   # - name: "news"
