--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,20 +11,25 @@ collections:
     folder: "src/routes/rosters" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{day}}-{{month}}-{{year}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    fields: # The fields for each document, usually in front matter
-      - {label: "Gamer Tag", name: "gamerTag", widget: "string", required: true}
-      - {label: "IRL Name", name: "IRL", widget: "string", required: false}
-      - {label: "Player Picture", name: "playerPicture", widget: "image", required: false}
-      - {label: "Links", name: "links", widget: "list", required: false, field: {label: "url", name: "url", widget: "string"}}
-      - {label: "About Player", name: "about", widget: "text", required: false}
-      - {label: "Team Affiliation", name: "teamAffiliation", widget: "relation", required: true, collection: "Teams", search_fields: ["teamName"], searchFields: ["teamName"], display_fields: ["teamName"], value_field: "teamName", valueFields: "teamName"}
-      - {label: "Team Role", name: "teamRole", widget: "list", required: false, field: {label: "Role", name: "role", widget: "string"}}
-      - {label: "Role In Org", name: "roleInOrg", widget: "list", required: false, field: {label: "Role", name: "role", widget: "string"}}
-      # - {label: "Computer Specs", name: "links", widget: "list", required: false, field: {label: "Item", name: "item", widget: "string"}}
-      - {label: "Clips", name: "clips", widget: "list", required: false, field: {label: "url", name: "url", widget: "string"}}
-      - {label: "Ranks", name: "ranks", widget: "list", required: false, field: {label: "Game Name", name: "gameName", widget: "string"}, {label: "Game Rank", name: "gameRank", widget: "string"}}
-      # - {label: "Player Achievements"}
-      # - {label: "Favorite Games", name: "links", widget: "list", required: false, field: {label: "url", name: "url", widget: "string"}}
+    fields:
+      - {label: "Gamer Tag", name: "gamerTag", widget: "string", required: true, hint: "Enter your gamer tag."}
+      - {label: "IRL Name", name: "IRL", widget: "string"}
+      - {label: "Player Picture", name: "playerPicture", widget: "image", hint: "Upload a profile picture."}
+      - {label: "Links", name: "links", widget: "list", field: {label: "Link", name: "link", widget: "string", pattern: ['^(http|https)://', 'Must be a valid URL']}}
+      - {label: "About Player", name: "about", widget: "text", hint: "Write a short bio about the player."}
+      - {label: "Esports Team & Role", name: "esportsTeamAndRole", widget: "object", required: true, fields: 
+          [
+            {label: "Esports Team", name: "esportsTeam", widget: "relation", collection: "Teams", search_fields: ["teamName"], display_fields: ["teamName"], value_field: "teamName", hint: "Select the professional Esports team."},
+            {label: "Team Roles", name: "teamRoles", widget: "list", field: {label: "Role", name: "role", widget: "string", hint: "Add roles as applicable."}}
+          ]
+        }
+      - {label: "Role In Org", name: "roleInOrg", widget: "list", field: {label: "Role", name: "role", widget: "string"}}
+      - {label: "Computer Specs", name: "computerSpecs", widget: "object", fields: [{label: "CPU", name: "cpu", widget: "string"}, {label: "GPU", name: "gpu", widget: "string"}, {label: "RAM", name: "ram", widget: "string"}]}
+      - {label: "Clips", name: "clips", widget: "list", field: {label: "Clip", name: "clip", widget: "file", hint: "Upload a video clip or provide a URL."}}
+      - {label: "Ranks", name: "ranks", widget: "list", fields: [{label: "Game Name", name: "gameName", widget: "string"}, {label: "Game Rank", name: "gameRank", widget: "string"}]}
+      - {label: "Player Achievements", name: "playerAchievements", widget: "list", field: {label: "Achievement", name: "achievement", widget: "string"}}
+      - {label: "Favorite Games", name: "favoriteGames", widget: "list", field: {label: "Game", name: "game", widget: "string"}}
+      - {label: "Recent Game", name: "recentGame", widget: "string", hint: "Add a game you've played recently."}
   - name: "blogs"
     label: "Blogs"
     folder: "src/routes/blog"
@@ -41,14 +46,26 @@ collections:
     create: true
     slug: "{{day}}-{{month}}-{{year}}"
     fields:
-      - {label: "Team Name", name: "teamName", widget: "string", required: true}
-      - {label: "Game", name: "game", widget: "string", required: true}
-      - {label: "Team Picture", name: "teamPicture", widget: "image", required: false}
-      - {label: "Teammates", name: "teammates", widget: "list", required: true, fields: 
-          [{label: "Player", name: "player", widget: "relation", required: true, collection: "players", search_fields: ["gamerTag", "IRL"], searchFields: ["gamerTag", "IRL"], display_fields: ["gamerTag", "IRL"], value_field: "gamerTag", valueFields: "gamerTag"}]}
-      # - {label: "Team Video"}
-      # - {label: "Rank"}
-      # - {label: "Next Game"}
-      # - {label: "Previous Games"}
-      # - {label: "Team Achievements"}
+      - {label: "Team Name", name: "teamName", widget: "string", required: true, hint: "Enter the official Esports team name."}
+      - {label: "Game", name: "game", widget: "string", required: true, hint: "Enter the game the team competes in, e.g., League of Legends, Valorant."}
+      - {label: "Team Picture", name: "teamPicture", widget: "image", required: false, hint: "Upload the team's logo or a group picture."}
+      - {label: "Teammates", name: "teammates", widget: "list", required: true, field: 
+          {label: "Player", name: "player", widget: "relation", collection: "players", search_fields: ["gamerTag", "IRL"], display_fields: ["gamerTag"], value_field: "gamerTag", hint: "Select players that are part of this team."}
+        }
+      - {label: "Team Achievements", name: "teamAchievements", widget: "list", required: false, field: {label: "Achievement", name: "achievement", widget: "string", hint: "List significant achievements of the team."}}
+      - {label: "Social Media Links", name: "socialMedia", widget: "object", fields: 
+          [
+            {label: "Twitter", name: "twitter", widget: "string", required: false, pattern: ['^(http|https)://twitter.com/', 'Must be a valid Twitter URL']},
+            {label: "Facebook", name: "facebook", widget: "string", required: false, pattern: ['^(http|https)://www.facebook.com/', 'Must be a valid Facebook URL']},
+            {label: "Instagram", name: "instagram", widget: "string", required: false, pattern: ['^(http|https)://www.instagram.com/', 'Must be a valid Instagram URL']}
+          ], hint: "Enter the team's social media URLs."
+        }
+      - {label: "About Team", name: "aboutTeam", widget: "markdown", required: false, hint: "Write a detailed description about the team, its history, strategy, and goals."}
+      - {label: "Recent Matches", name: "recentMatches", widget: "list", required: false, fields: 
+          [
+            {label: "Opponent Team", name: "opponentTeam", widget: "string"},
+            {label: "Result", name: "result", widget: "string"},
+            {label: "Date", name: "date", widget: "datetime"}
+          ], hint: "Add recent match details like opponent, result, and date."
+        }
   # - name: "news"
