updated cms to allow for steam id and riot summoner name to pull recent games and ranked info. Also added env file

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -65,10 +65,11 @@ collections:
             widget: "file"
             required: false
             hint: "Alternatively, upload a video file for the clip. Acceptable formats are .mp4, .webm, ect." 
-      - {label: "Ranks", name: "ranks", widget: "list", required: false, fields: [{label: "Game Name", name: "gameName", widget: "string"}, {label: "Game Name", name: "gameName", widget: "string"}]}
+      # - {label: "Ranks", name: "ranks", widget: "list", required: false, fields: [{label: "Game Name", name: "gameName", widget: "string"}, {label: "Game Name", name: "gameName", widget: "string"}]}
+      - {label: "LOL Summoner Name", name: "summonerName", widget: "string", required: false, hint: "Provide your LOL summoner name to get ranked and tft info"}
       - {label: "Player Achievements", name: "playerAchievements", widget: "list", required: false, field: {label: "Achievement", name: "achievement", widget: "string"}}
       - {label: "Favorite Games", name: "favoriteGames", widget: "list", required: false, field: {label: "Game", name: "game", widget: "string"}}
-      - {label: "Recent Game", name: "recentGame", widget: "string", required: false, hint: "Add a game you've played recently."}
+      - {label: "Steam Id", name: "steamId", widget: "string", required: false, hint: "Provide your steam id to grab recent games played on steam"}
   - name: "blogs"
     label: "Blogs"
     folder: "src/routes/blog"
